// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-table-stateless-wc should render with _label="Table with horizontal and vertical headers" _headerCells={"horizontal":[[{"key":"header1","label":"Header1","textAlign":"left","minWidth":"100px"},{"key":"header2","label":"Header2","textAlign":"center","minWidth":"100px"},{"key":"header3","label":"Header3","textAlign":"right","minWidth":"100px"}]],"vertical":[[{"key":"row1","label":"Row 1","textAlign":"left","minWidth":"100px"},{"key":"row2","label":"Row 2","textAlign":"center","minWidth":"100px"},{"key":"row3","label":"Row 3","textAlign":"right","minWidth":"100px"}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2","header3":"Cell 1.3"},{"header1":"Cell 2.1","header2":"Cell 2.2","header3":"Cell 2.3"},{"header1":"Cell 3.1","header2":"Cell 3.2","header3":"Cell 3.3"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <kol-table-settings-wc></kol-table-settings-wc>
    <div class="kol-table__scroll-container">
      <table class="kol-table__table" style="min-width: 300px;">
        <div aria-describedby="caption" class="kol-table__focus-element"></div>
        <caption class="kol-table__caption" id="caption">
          Table with horizontal and vertical headers
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <td aria-hidden="true" colspan="1" rowspan="1"></td>
            <th class="kol-table__cell kol-table__cell--align-left kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header1
            </th>
            <th class="kol-table__cell kol-table__cell--align-center kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header2
            </th>
            <th class="kol-table__cell kol-table__cell--align-right kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header3
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="4"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <th class="kol-table__cell kol-table__cell--align-left kol-table__cell--header" data-sort="sort-undefined" scope="row" style="min-width: 100px;">
              Row 1
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 1.2
            </td>
            <td class="kol-table__cell kol-table__cell--align-right kol-table__cell--body" style="text-align: right;">
              Cell 1.3
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th class="kol-table__cell kol-table__cell--align-center kol-table__cell--header" data-sort="sort-undefined" scope="row" style="min-width: 100px;">
              Row 2
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 2.2
            </td>
            <td class="kol-table__cell kol-table__cell--align-right kol-table__cell--body" style="text-align: right;">
              Cell 2.3
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th class="kol-table__cell kol-table__cell--align-right kol-table__cell--header" data-sort="sort-undefined" scope="row" style="min-width: 100px;">
              Row 3
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 3.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 3.2
            </td>
            <td class="kol-table__cell kol-table__cell--align-right kol-table__cell--body" style="text-align: right;">
              Cell 3.3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with only horizontal headers" _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","textAlign":"left","minWidth":"100px"},{"key":"header2","label":"Header 2","textAlign":"center","minWidth":"100px"}]],"vertical":[]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <kol-table-settings-wc></kol-table-settings-wc>
    <div class="kol-table__scroll-container">
      <table class="kol-table__table" style="min-width: 200px;">
        <div aria-describedby="caption" class="kol-table__focus-element"></div>
        <caption class="kol-table__caption" id="caption">
          Table with only horizontal headers
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th class="kol-table__cell kol-table__cell--align-left kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header 1
            </th>
            <th class="kol-table__cell kol-table__cell--align-center kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header 2
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="2"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 1.2
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 2.2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with two horizontal header rows" _headerCells={"horizontal":[[{"label":"Header 1","textAlign":"left","minWidth":"100px"},{"label":"Header 2","textAlign":"center","minWidth":"100px"}],[{"key":"header1","label":"Sub Header 1","textAlign":"left","minWidth":"100px"},{"key":"header2","label":"Sub Header 2","textAlign":"center","minWidth":"100px"}]],"vertical":[[{"key":"row-1","label":"Row 1","textAlign":"left","minWidth":"100px"},{"key":"row-2","label":"Row 2","textAlign":"center","minWidth":"100px"}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <kol-table-settings-wc></kol-table-settings-wc>
    <div class="kol-table__scroll-container">
      <table class="kol-table__table" style="min-width: 200px;">
        <div aria-describedby="caption" class="kol-table__focus-element"></div>
        <caption class="kol-table__caption" id="caption">
          Table with two horizontal header rows
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <td aria-hidden="true" colspan="1" rowspan="2"></td>
            <th class="kol-table__cell kol-table__cell--align-left kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header 1
            </th>
            <th class="kol-table__cell kol-table__cell--align-center kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Header 2
            </th>
          </tr>
          <tr class="kol-table__head-row">
            <th class="kol-table__cell kol-table__cell--align-left kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Sub Header 1
            </th>
            <th class="kol-table__cell kol-table__cell--align-center kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Sub Header 2
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="3"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <th class="kol-table__cell kol-table__cell--align-left kol-table__cell--header" data-sort="sort-undefined" scope="row" style="min-width: 100px;">
              Row 1
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 1.2
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th class="kol-table__cell kol-table__cell--align-center kol-table__cell--header" data-sort="sort-undefined" scope="row" style="min-width: 100px;">
              Row 2
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 2.2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with two spanned horizontal and vertical headers" _headerCells={"horizontal":[[{"label":"H-Header","colSpan":2,"minWidth":"100px"}],[{"key":"header1","label":"Sub H-Header 1","minWidth":"100px"},{"key":"header2","label":"Sub H-Header 2","minWidth":"100px"}]],"vertical":[[{"label":"V-Header","rowSpan":2,"minWidth":"100px"}],[{"label":"Sub V-Header","minWidth":"100px"}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <kol-table-settings-wc></kol-table-settings-wc>
    <div class="kol-table__scroll-container">
      <table class="kol-table__table" style="min-width: 200px;">
        <div aria-describedby="caption" class="kol-table__focus-element"></div>
        <caption class="kol-table__caption" id="caption">
          Table with two spanned horizontal and vertical headers
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <td aria-hidden="true" colspan="2" rowspan="2"></td>
            <th class="kol-table__cell kol-table__cell--header" colspan="2" data-sort="sort-undefined" scope="colgroup" style="min-width: 100px;">
              H-Header
            </th>
          </tr>
          <tr class="kol-table__head-row">
            <th class="kol-table__cell kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Sub H-Header 1
            </th>
            <th class="kol-table__cell kol-table__cell--header" data-sort="sort-undefined" scope="col" style="min-width: 100px;">
              Sub H-Header 2
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="4"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <th class="kol-table__cell kol-table__cell--header" data-sort="sort-undefined" rowspan="2" scope="row" style="min-width: 100px;">
              V-Header
            </th>
            <th class="kol-table__cell kol-table__cell--header" data-sort="sort-undefined" scope="row" style="min-width: 100px;">
              Sub V-Header
            </th>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 1.2
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--body">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 2.2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;
